2008-06-03  Aaron Bockover  <abock@gnome.org>

	* src/Extensions/Banshee.NotificationArea/Banshee.NotificationArea/NotificationAreaService.cs:
	Remove the Iterate event from the event mask
	* src/Extensions/Banshee.NotificationArea/Banshee.NotificationArea/X11NotificationAreaBox.cs:
	Do not update the popup since now all of its children do their own
	state/event handling

	* src/Extensions/Banshee.NotificationArea/Banshee.NotificationArea/TrackInfoPopup.cs:
	Removed a bunch of crappy legacy code for showing the position/duration
	via the label and progress bar; replaced with our standard 
	SeekSlider widget in horizontal mode (BGO #536396)

2008-06-03  Gabriel Burt  <gabriel.burt@gmail.com>

	* src/Libraries/Migo/Migo.Syndication/RssParser.cs: If a XML blob isn't
	valid XML, log the actual error so we have a hope of fixing or working
	around the problem.

2008-06-03  Gabriel Burt  <gabriel.burt@gmail.com>

	* src/Extensions/Banshee.CoverArt/Banshee.CoverArt/CoverArtJob.cs: Avoid
	issue with last_scan being MinValue and trying to subtract retry_every
	from it.  Also, wrap the entire fetch loop in a try/catch to make sure we
	exit the user job and log any exception.

	* src/Core/Banshee.Services/Banshee.Database/BansheeDbFormatMigrator.cs:
	Don't stop the entire migration because one track fails.  Log the
	exception, and keep going.

2008-06-03  Aaron Bockover  <abock@gnome.org>

	* src/Extensions/Banshee.NowPlaying/Banshee.NowPlaying/FullscreenWindow.cs:
	Fixed focus bug with metacity (BGO #531187)

	* src/Dap/Banshee.Dap/Banshee.Dap.Gui/DapInfoBar.cs: Use only the normal
	background color and create a darker version of that to do the subtle
	gradient behind the bar (BGO #536052)

2008-06-03  Gabriel Burt  <gabriel.burt@gmail.com>

	* src/Extensions/Banshee.CoverArt/Banshee.CoverArt/CoverArtJob.cs:
	* src/Extensions/Banshee.CoverArt/Banshee.CoverArt/CoverArtService.cs:
	Remove verbose logging.
